the linter is fixed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,20 @@
 {
+    "python.linting.enabled": true,
+    "python.linting.cwd": "./api",
     "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.pylintPath": "pylint",
+    "python.linting.lintOnSave": true,
+    "python.linting.ignorePatterns": [
+        "**/site-packages/**/*.py",
+        ".vscode/*.py"
+    ],
+    "python.formatting.provider": "autopep8",
+    "python.formatting.autopep8Args": [
+        "--max-line-length",
+        "160",
+        "--aggressive",
+        "--aggressive",
+        "--in-place"
+    ],
+    "editor.formatOnSave": true,
 }
