--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,9 @@
 name: Pylint
 
 on: [push]
+defaults:
+  run: 
+    working-directory: api
 
 jobs:
   build:
@@ -11,16 +14,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      working-directory: ./api
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      working-directory: ./api
       run: |
         python -m pip install --upgrade pip
         pip install pylint
     - name: Analysing the code with pylint
-      working-directory: ./api
       run: |
         cd api && pylint $(find . -name "*.py" | xargs)
