--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,4 +23,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint --rcfile=pylint.rc $(find . -name "*.py" | xargs)
+        pylint --rcfile=.pylintrc --ignore-patterns="/site-packages//*.py" `ls -R|grep .py$|xargs`
