--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,12 +1,13 @@
 name: Pylint
 
 on: [push]
+
 defaults:
-  run: 
-    working-directory: api
+  run:
+    working-directory: ./api
 
 jobs:
-  build:
+  build:        
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -20,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
-        pylint --rcfile=pylint.rc --ignore-patterns="**/site-packages/**/*.py" $(find . -name "*.py" | xargs)
+        pylint --rcfile='.pylintrc' --init-hook='import sys; sys.path.append("./")' *
